@@ -123,6 +123,7 @@ Juergen A. Erhard	jae@laden.ilk.de
 Juergen Keil		jk@tools.de
 Karl Berry		kb@cs.umb.edu
 Karl Heuer		kwzh@gnu.org
+Kelley Cook		kcook@gcc.gnu.org
 Kevin Dalley		kevin@aimnet.com
 Kevin P. Fleming.	kpfleming@cox.net
 Kevin Ryde		user42@zip.com.au
