@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -53,7 +53,7 @@ $MAKE
 
 # Update an aclocal.m4 dependency, then make sure all Makefiles
 # are updated, even from a sub-directory.
-echo 'AC_DEFUN([MORE_DEFS], [AC_SUBST([GREPME])])' > m4/moredefs.m4
+echo 'AC_DEFUN_ONCE([MORE_DEFS], [AC_SUBST([GREPME])])' > m4/moredefs.m4
 cd sub
 $MAKE
 cd ..
