@@ -1,3 +1,10 @@
+2004-10-10  Kelley Cook  <kcook@gcc.gnu.org>  (tiny change)
+	    Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* aclocal.in ($ac_defun_rx): Match AC_DEFUN_ONCE.
+	(trace_used_macros): Trace AC_DEFUN_ONCE.
+	* tests/aclocal5.test: Use AC_DEFUN_ONCE.
+
 2004-10-10  Stepan Kasal  <kasal@ucw.cz>  (tiny change)
 
 	* doc/automake.texi (Extending): Typo.
